.archive/kube/deploy/core/storage/rook-ceph/pve/app/object.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app "rgw-${CLUSTER_NAME}"
  namespace: rook-ceph
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/server-alias: '*.${APP_DNS_RGW_S3}'
  labels:
    app.kubernetes.io/component: cephobjectstores.ceph.rook.io
    app.kubernetes.io/instance: biohazard
    app.kubernetes.io/name: ceph-rgw
    app.kubernetes.io/part-of: biohazard
    ceph_daemon_id: biohazard
    ceph_daemon_type: rgw
    rgw: biohazard
    rook_object_store: biohazard
spec:
  ingressClassName: nginx
  rules:
    - host: &host ${APP_DNS_RGW_S3}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-rgw-biohazard
                port:
                  number: 6953
  tls:
    - hosts:
        - *host
